--- a/cfn.yaml
+++ b/cfn.yaml
@@ -51,8 +51,8 @@ Parameters:
     Description: "The instance types for the compute environment as a comma-separated list"
   GPUComputeEnvInstanceTypes:
     Type: CommaDelimitedList
-    Default: "p3.2xlarge,p3.8xlarge,p3.16xlarge"
-    Description: "The instance types for the p3 GPU compute environment as a comma-separated list"
+    Default: "g5.xlarge,g5.2xlarge,g5.4xlarge,g5.8xlarge,g5.12xlarge,g5.16xlarge,g5.24xlarge,g5.48xlarge"
+    Description: "The instance types for the g5 GPU compute environment as a comma-separated list"
   CustomRole:
     Type: String
     Default: 'false'
@@ -102,7 +102,7 @@ Mappings:
     ServiceName:
       value: 'metadata-service-v2'
     ImageUrl:
-      value: 'netflixoss/metaflow_metadata_service:v2.3.5'
+      value: 'netflixoss/metaflow_metadata_service:v2.4.12'
     ContainerPort:
       value: 8080
     ContainerCpu:
@@ -123,7 +123,7 @@ Mappings:
     ServiceName:
       value: 'metaflow-ui-service'
     ImageUrl:
-      value: 'netflixoss/metaflow_metadata_service:v2.3.5'
+      value: 'netflixoss/metaflow_metadata_service:v2.4.12'
     ContainerPort:
       value: 8083
     ContainerCpu:
@@ -425,6 +425,8 @@ Resources:
               Value: !GetAtt 'RDSMasterInstance.Endpoint.Address'
             - Name: "MF_METADATA_DB_PORT"
               Value: "5432"
+            - Name: "MF_METADATA_DB_SSL_MODE"
+              Value: "prefer"
             - Name: "MF_METADATA_DB_USER"
               Value: "master"
             - Name: "MF_METADATA_DB_PSWD"
@@ -606,7 +608,7 @@ Resources:
       DeleteAutomatedBackups: 'true'
       StorageType: 'gp2'
       Engine: 'postgres'
-      EngineVersion: '11'
+      EngineVersion: '16.4'
       MasterUsername: !Join ['', ['{{resolve:secretsmanager:', !Ref MyRDSSecret, ':SecretString:username}}' ]]
       MasterUserPassword: !Join ['', ['{{resolve:secretsmanager:', !Ref MyRDSSecret, ':SecretString:password}}' ]]
       VPCSecurityGroups:
@@ -1663,6 +1665,8 @@ Resources:
               Value: !GetAtt 'RDSMasterInstance.Endpoint.Address'
             - Name: "MF_METADATA_DB_PORT"
               Value: "5432"
+            - Name: "MF_METADATA_DB_SSL_MODE"
+              Value: "prefer"
             - Name: "MF_METADATA_DB_USER"
               Value: !Join ['', ['{{resolve:secretsmanager:', !Ref MyRDSSecret, ':SecretString:username}}' ]]
             - Name: "MF_METADATA_DB_PSWD"
